<resources>
    <string name="app_name">twitter</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mail">Mail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_tweet">New tweet</string>
    <string name="timeline">Timeline</string>
    <string name="wrong_input">Wrong input</string>
    <string name="advertisement_massage">Hello: Hello, its me I was wondering if after all these years You-d like to meet,
        to go over Everything They say that times supposed to heal ya But I aint done much healing</string>
    <string name="main">Main</string>
    <string name="read">Read</string>
    <string name="friends">Friends</string>
    <string name="followers">Followers</string>
    <string name="retweets">Retweets</string>
    <string name="likes">Likes</string>
    <string name="tweet">Tweet</string>
    <string name="channel_name">Main channel</string>
    <string name="channel_description">task notifications</string>
</resources>
